# sbt-framework

./: .flake8  .gitignore  CHANGELOG.md  CITATION.cff  README.md  ROADMAP.md  pyproject.toml
data/: ATOM_TAXONOMY.yaml
docs/: FRAMEWORK.md  GLOSSARY.md
docs/architecture/: ALIBI_ANALOGY.mmd  BRAND_PIPELINE.mmd  OBSERVER_MODEL.mmd
prompts/: 01_BRAND_DECOMPOSITION.md  02_OBSERVER_MAPPING.md  03_CLOUD_PREDICTION.md  04_COHERENCE_AUDIT.md  05_EMISSION_STRATEGY.md  06_RECOLLAPSE_SIMULATION.md  07_RESOURCE_ALLOCATION.md  README.md
src/spectral_branding/: __init__.py  prompt_generator.py
src/spectral_branding/validators/: __init__.py  _math.py  capacity_analyzer.py  cohort_validator.py  metamerism_detector.py  metric_validator.py  resource_allocation_validator.py  specification_validator.py  trajectory_risk.py  validate.py
templates/: 01_brand_decomposition.yaml  02_observer_mapping.yaml  03_cloud_prediction.yaml  03_time_series.yaml  04_coherence_audit.yaml  05_emission_strategy.yaml  06_recollapse_simulation.yaml  07_resource_allocation.yaml  DIMENSION_GLOSSARY.yaml  FRAMEWORKS.md
tests/: test_prompt_generator.py  test_specification_validator.py  test_validators.py
